# Recruit_AI_

./: .gitignore  README.md  pyproject.toml
Backend/Recruit_AI/: .gitignore  manage.py  requirements.txt
Backend/Recruit_AI/Recruit_AI/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
Backend/Recruit_AI/aspect/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
Backend/Recruit_AI/aspect/migrations/: 0001_initial.py
Backend/Recruit_AI/candidates/: admin.py  models.py  signals.py  tasks.py  urls.py  views.py
Backend/Recruit_AI/candidates/migrations/: 0001_initial.py
Backend/Recruit_AI/job/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
Backend/Recruit_AI/job/migrations/: 0001_initial.py
Backend/Recruit_AI/question/: final_candidate.py  final_job.py  models.py  tasks.py  urls.py  views.py
Backend/Recruit_AI/question/agents/: base_agent.py  feedback_agent.py  fixes_agent.py  g_aspects_agent.py  issues_agent.py  metrics_agent.py  o_aspects_agent.py  profile_agent.py  questions_agent.py  score_agent.py
Backend/Recruit_AI/question/migrations/: 0001_initial.py
Backend/Recruit_AI/question/prompts/: feedback_prompt.py  fixes_prompt.py  g_aspect_prompt.py  (+7 more)
Backend/Recruit_AI/utils/: authentication_decorator.py  email_sender.py  tool_generate_presigned_url.py  verify_google_token.py
Mvp_1/: vite.config.js
Mvp_1/public/data/: db.json  db2.json  db3.json
Mvp_1/src/: App.css  App.jsx  UploadResumes.jsx  main.jsx  style.css
Mvp_1/src/dummy/: Home2.jsx  LoginPage2.jsx  RegisterPage2.jsx
Mvp_1/src/utils/: apiclient.jsx
(+81 files in other folders)
